--- a/HeeHeeWeak/Classes/Mine/Views/Mine.storyboard
+++ b/HeeHeeWeak/Classes/Mine/Views/Mine.storyboard
@@ -24,6 +24,34 @@
             </objects>
             <point key="canvasLocation" x="983.5" y="535.5"/>
         </scene>
+        <!--Shar View Controller-->
+        <scene sceneID="Kmn-yN-hmj">
+            <objects>
+                <viewController storyboardIdentifier="ShareVCId" id="tgp-Nh-Q89" customClass="SharViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xd6-t4-DH2"/>
+                        <viewControllerLayoutGuide type="bottom" id="Wix-O4-Gg4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IPV-HK-iB1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7Vw-4O-aWa">
+                                <rect key="frame" x="0.0" y="20" width="375" height="206"/>
+                                <color key="backgroundColor" red="1" green="0.55132871029999997" blue="0.77657310430000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="92g-Y6-7kC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1401.5" y="535.5"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="IHA-XT-MCp">
             <objects>
